buid and run ok with: $ ./gradlew clean assembleDebug -x lint -x lintVitalRelease --stacktrace

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
-/build
-/captures
+*.log
+db_files
+*.iml
+.project.properties
+.idea/
+.gradle
+build/
+app/build/
+app/.cxx/
+/out
+local.properties
